# ciwithfedora

./: README.md  pyproject.toml  tox.ini
.github/workflows/: workflow.yml  workflow2.yml
ciwithfedora/: calculator.py  test_calculator.py
